DR-1206 fix Nav jumps on scroll issue

--- a/src/main/webapp/src/scss/header-footer/header.scss
+++ b/src/main/webapp/src/scss/header-footer/header.scss
@@ -1,5 +1,6 @@
 .foxtel-header-breadcrumb-wrapper{
   background: #fff;
+  width:100%;
 }
 
 /*foxtel header breadcrumb scrolling up pop state*/
@@ -68,6 +69,7 @@
 }
 .foxtel-header__left__nav__more{
   position:relative;
+  margin-right:0 !important;
   @include breakpoint(tablet) {
     display:none;
   }
