--- a/src/main/webapp/src/scss/main/minisite/foxtel-now/header-footer/header.scss
+++ b/src/main/webapp/src/scss/main/minisite/foxtel-now/header-footer/header.scss
@@ -67,7 +67,7 @@
   }
 }
 
-.foxtel-header__right {
+.foxtel-now-header__right {
   display: flex;
 
   .foxtel-now-header__right__wrapper {
